Avoid Totals label overlap on smallest screens

--- a/src/components/Totals/styles.scss
+++ b/src/components/Totals/styles.scss
@@ -24,6 +24,10 @@ $heightBigBar: 2rem;
 .side {
   display: flex;
   align-items: flex-end;
+
+  @media (max-width: 360px) {
+    align-items: flex-start;
+  }
 }
 
 .side:first-child {
@@ -46,6 +50,10 @@ $heightBigBar: 2rem;
 
 .label {
   margin: 0 0.25rem 0.375rem;
+
+  @media (max-width: 360px) {
+    margin: 0.4375rem 0.25rem 0;
+  }
 
   @media (min-width: 668px) and (min-height: 480px) {
     margin: 0 0.25rem 0.5rem;
